finisa except draw

--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
 <body>
 <header>
     <h1>Tic Tac Toe</h1>
+    <h2 id="whoPlay">This is Player 1 Turn</h2>
+    <div class="input-group mb-3">
+        <input id="inputGrid" type="text" class="form-control" placeholder="Grid Size" aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <input id="inputNumberPlayer" type="text" class="form-control" placeholder="Number Of Player" aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="inputBtn">Button</button>
+        </div>
+    </div>
 </header>
 <div class="container">
     <div class="row" id="grid">
     </div>
 </div>
-<button type="button" class="btn btn-primary">Clear</button>
+<button type="button" class="btn btn-primary" id="clear">Clear</button>
 <button type="button" class="btn btn-primary" id="log">Log please</button>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 <script src="script.js"></script>
