--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tic Tac Toe</title>
     <meta name="description" content="Game tic tac toe">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,11 +17,11 @@
         <input id="inputGrid" type="text" class="form-control" placeholder="Grid Size" aria-label="Recipient's username" aria-describedby="basic-addon2">
         <input id="inputNumberPlayer" type="text" class="form-control" placeholder="Number Of Player" aria-label="Recipient's username" aria-describedby="basic-addon2">
         <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button" id="inputBtn">Button</button>
+            <button class="btn btn-outline-secondary" type="button" id="inputBtn">Generate</button>
         </div>
     </div>
 </header>
-<div class="container">
+<div class="container" id="game">
     <div class="row" id="grid">
     </div>
 </div>
