--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <title>Tic Tac Toe</title>
-    <meta name="description" content="Game tic tac toe">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <meta content="Game tic tac toe" name="description">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
 <header>
     <h1>Tic Tac Toe</h1>
     <h2 id="whoPlay">This is Player 1 Turn</h2>
     <div class="input-group mb-3">
-        <input id="inputGrid" type="text" class="form-control" placeholder="Grid Size" aria-label="Recipient's username" aria-describedby="basic-addon2">
-        <input id="inputNumberPlayer" type="text" class="form-control" placeholder="Number Of Player" aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <input aria-describedby="basic-addon2" aria-label="Recipient's username" class="form-control" id="inputGrid" placeholder="Grid Size"
+               type="text">
+        <input aria-describedby="basic-addon2" aria-label="Recipient's username" class="form-control" id="inputNumberPlayer"
+               placeholder="Number Of Player" type="text">
         <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button" id="inputBtn">Generate</button>
+            <button class="btn btn-outline-secondary" id="inputBtn" type="button">Generate</button>
         </div>
     </div>
 </header>
@@ -25,9 +28,11 @@
     <div class="row" id="grid">
     </div>
 </div>
-<button type="button" class="btn btn-primary" id="clear">Clear</button>
-<button type="button" class="btn btn-primary" id="log">Log please</button>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<button class="btn btn-primary" id="clear" type="button">Clear</button>
+<button class="btn btn-primary" id="log" type="button">Log please</button>
+<script crossorigin="anonymous"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
